tests/errors/duplicate-startpos.spcasmtest
org $200
startpos
nop

org $300
startpos
nop
